--- a/etc/hacking.org
+++ b/etc/hacking.org
@@ -37,7 +37,11 @@ along with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
   example, could be implemented in a pickle =bitpatterns.pk=.
 
 * Maintenance
-** Global Maintainer
+** GNU Maintainer
+
+   Jose E. Marchesi	<jemarch@gnu.org>
+
+** Global Maintainers
 
    Jose E. Marchesi	<jemarch@gnu.org>
 
@@ -55,11 +59,11 @@ along with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
    keep the other hackers aware of what is going on in other areas.
 
 #+BEGIN_VERSE
-poked                   Mohammad-Reza Nabipoor <mnabipoor@gnu.org>
 etc/poke-mode.el        Aurélien Aptel <aaptel@suse.com>
 doc/learn-poke-language-in-y-minutes.pk
-                        Mohammad-Reza Nabipoor <mnabipoor@gnu.org>
-pickles/riscv.pk        Mohammad-Reza Nabipoor <mnabipoor@gnu.org>
+pickles/riscv.pk
+pickles/pcap.pk
+poked                   Mohammad-Reza Nabipoor <mnabipoor@gnu.org>
 #+END_VERSE
 
 ** Write After Approval
@@ -112,9 +116,9 @@ Arsen Arsenović		<arsen@aarsen.me>
 
 ** Installing Obvious Changes
 
-   Anyone having write access to the git repository is allowed to push
-   obvious changes to non-personal branches.  The "obvious" category
-   includes typos in comments, renaming of variables, etc.
+   Anyone listed in the Write After Approval section is allowed to
+   push obvious changes to non-personal branches.  The "obvious"
+   category includes typos in comments, renaming of variables, etc.
 
    If you commit and push an obvious change, you are still required to
    send an email to the mailing list stating you installed the change.
@@ -704,7 +708,6 @@ Arsen Arsenović		<arsen@aarsen.me>
     Note also how newlines are perceived by expect as the sequence
     =\r\n=.
 
-
 ** Testing Pickles
 
 Each pickle in =pickles/FOO.pk= shall have a test file
@@ -1174,131 +1177,6 @@ have a testsuite in =testsuite/poke.FOO= with a driver
     is installed in the phase =anal1=, executes in post-order, and
     serves the AST nodes with code =PKL_AST_COMP_STMT=.
 
-*** Transformation Phases
-
-    - trans1 ::
-      - Finishes strings by expanding \-sequences, emitting
-        diagnostics if an invalid \-sequence is found.
-      - Computes and set the number of elements in STRUCT nodes.
-      - Computes and sets the number of elements, fields and
-        declarations in struct TYPE nodes.
-      - Completes offsets with implicit magnitude by adding a magnitude of
-        int<32>1.
-      - Calculates the number of arguments in FUNCALL nodes.
-      - Annotates declaration nodes as being directly contained in
-        struct type nodes.
-      - Annotates variables that refer to recursive function calls as
-        recursive.
-      - Annotates variables with the enclosing function, and with their
-        lexical nesting level with respect the beginning of the enclosing
-        function.
-      - Variables that refer to parameterless functions are transformed
-        into funcalls to these functions.
-      - Finalizes ATTR node by determining the operation corresponding to
-        the attribute name, turning the IDENTIFIERxEXP binary expression
-        into an unary expression.
-      - Annotates a function's first optional argument and the number of
-        formal arguments.
-      - Completes function types with their number of formal arguments,
-        annotates its first optional argument, and determines whether the
-        function type gets a vararg.
-      - Completes trimmers with implicit indexes, i.e. [N:], [:N] or [:],
-        by adding the missing index as an appropriate expression.
-      - Decodes format strings in printf statements.
-      - Computes and sets the indexes of all the elements of an ARRAY node
-        (array literal) and sets the size of the array.
-      - Annotates compound statements with the number of variable and
-        function declarations occurring within the statement.
-    - trans2 ::
-      - Annotates expression nodes that are literals, i.e. expressions
-        whose values can be computed at compile-time.
-      - Annotates offsets, arrays, indexers, trimmers, structs, struct
-        references, and casts as literals.
-      - Turn struct references that refer to parameterless methods into
-        funcalls to these methods.
-      - In offsets whose units are type names, make sure these types are
-        complete and replace the unit with an expression that evaluates to
-        the size of the unit type, in bits.
-    - trans3 ::
-      - SIZEOF nodes whose operand is a complete type are replaced with an
-        offset.
-
-*** Analysis Phases
-
-    - anal1 ::
-      - Checks that the elements in struct literals have unique names.
-      - Checks that the elements in struct types have unique names.
-      - Checks that declarations in unions appear before any of the
-        alternatives.
-      - Checks that builtin compound statements don't contain statements.
-      - Check that the actual arguments passed to a funcall are all either
-        named or none named.
-      - Check that named arguments to funcalls are passed only once.
-      - Check that all optional formal arguments in a function specifier
-        are located at the end of the arguments list.
-      - Check that function specifiers have at most one vararg argument,
-        and that it is located at the end of the formal arguments list.
-      - Check that function types have at most one vararg argument, and
-        that it is located at the end of the formal arguments list.
-      - Check that every BREAK statement have a containing statement.
-      - Check that every RETURN statement have a containing function.
-      - If the unit in an offset type specifier is specified using an
-        integral constant, this constant should be bigger than zero.
-      - The unit of an offset literal, if expressed as an integral, shall
-        be bigger than zero.
-      - Check that the bit count operator in left shift operations are
-        less than the number of bits of the shifted operand.  This is
-        checked in cases where the bit count is constant.
-      - Methods can only be defined in a struct type.
-      - The initializing expressions in unit declarations should be
-        integer nodes.
-      - Only methods can call other methods.
-      - Methods are not allowed to refer to variables and functions
-        defined in struct types.
-      - A method can only refer to struct fields and methods defined in
-        the same struct type.
-      - Functions recursively defined inside methods are not allowed to
-        refer to struct fields and methods.
-      - Only methods can assign struct fields as variables.
-    - anal2 ::
-      - Every expression, array and struct node should be annotated with a
-        type, and the type's completeness should have been determined.
-      - The magnitude in  offset literals should be an integral
-        expression.
-      - The magnitude in offset literals should have a type and its
-        completeness should be known.
-      - A return statement returning a value is not allowed in a void
-        function.
-      - An expressionless return statement is invalid in a non-void
-        function.
-      - A funcall to a void function is only allowed in an
-        expression-statement.
-      - Endianness specifiers in struct fields are only valid when applied
-        to integral types.
-      - In unions, alternatives appearing after an alternative with no
-        constraint expression, or a constant expression known to be true,
-        are unreachable.  Warn about this.
-      - If an union alternative has a constraint known to be false, it is
-        never taken.  Warn about this.
-      - Optional fields are not supported in unions.
-      - The indexes in array initializers should be constant.
-    - analf ::
-      - Every array initializer should have an index.
-      - Check that the left-hand side of assignment statements are of the
-        right kind.
-
-*** Type System Phases
-
-    - typify1 ::
-      - Checks that the expression in which a funcall is applied is a
-        function, and that the types of the formal parameters mach the
-        types of the funcall arguments.
-      - Checks that void functions are not called in contexts where a
-        value is expected.
-    - typify2 ::
-      - Checks that the type of the expression in a return statement
-        matches the return type of its containing function.
-
 *** Front and Middle End Handlers should be Re-entrant
 
     When a type is referenced by name, for example in a map:
@@ -1318,6 +1196,10 @@ have a testsuite in =testsuite/poke.FOO= with a driver
     Right Thing (TM).
 
 ** Adding Compiler Built-Ins
+
+   [NOTE: now that inline asm statements are supported, built-ins
+    are implemented as immutable functions in the compiler runtime
+    rt-pkl.pk.]
 
    Compiler built-ins are predefined functions, provided by the
    compiler, that generate particular assembler instructions.
@@ -1538,6 +1420,26 @@ have a testsuite in =testsuite/poke.FOO= with a driver
     =wrapped-functions= or =wrapped-globals=.  This includes for
     example the =pvm_*= wrappers we define in the file, to be used in
     PVM instructions.
+
+*** Wrapping standard function calls
+
+    If we need to call to a standard library function provided by the
+    system (such as =printf=, =strstr=, or the like) from the body of
+    a PVM instruction, we have to consider the possibility of gnulib
+    replacing such function with another having a name like
+    =rpl_printf= or =rpl_strstr=.
+
+    Since the =wrapped-functions= list in pvm.jitter is static and the
+    referred functions must exist, just wrapping the =rpl_*= symbols
+    doesn't work.
+
+    So instead, for every standard function =FOO= we call from PVM
+    instructions, we:
+
+    - Create a wrapper for it, called =pvm_FOO=, and put it in the
+      pvm-wrappers.[ch] source files.
+    - Use =pvm_FOO= in the PVM instruction.
+    - Add =pvm_FOO= to the wrapped-functions section in pvm.jitter.
 
 * Memory Management
 
