--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-01-26  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* doc/poke.texi: get_time is now gettime.
+
 2023-01-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/ios.c (ios_close): Re-use the IOS ID if possible.
