--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2023-01-27  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-typify.c (pkl_typify1_ps_decl): Check field
+	pretty-printers.
+	* libpoke/pkl-rt.pk (_pkl_print_format_any): Use field
+	pretty-printers whenever available.
+	* testsuite/poke.pkl/struct-field-pretty-print-diag-1.pk: New
+	test.
+	* testsuite/poke.pkl/struct-field-pretty-print-diag-2.pk:
+	Likewise.
+	* testsuite/poke.pkl/struct-field-pretty-print-1.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+	* doc/poke.texi (Struct Pretty Printers): New section.
+
 2023-01-26  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* doc/poke.texi: get_time is now gettime.
