--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2023-01-27  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-typify.c (pkl_typify1_ps_decl): Do not validate
+	signature of _print* functions, as opposed to methods.
+	* testsuite/poke.pkl/struct-types-defun-4.pk: New test.
+	* testsuite/poke.pkl/struct-pretty-print-diag-1.pk: Likewise.
+	* testsuite/poke.pkl/struct-pretty-print-diag-2.pk: Likewise.
+
 2023-01-26  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* doc/poke.texi: get_time is now gettime.
