pkl-rt: simplify code that calls pretty-printers
No need to allocate that additional local variable.

2023-01-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (_pkl_print_format_any): Simplify code.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2023-01-27  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-rt.pk (_pkl_print_format_any): Simplify code.
+
+2023-01-27  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-typify.c (pkl_typify1_ps_decl): Do not validate
 	signature of _print* functions, as opposed to methods.
 	* testsuite/poke.pkl/struct-types-defun-4.pk: New test.
