--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-01-27  Arsen Arsenović  <arsen@aarsen.me>
+
+	* configure.ac: Add git-version-gen reminder.
+
 2023-01-27  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-typify.c (pkl_typify1_ps_decl): Do not validate
