--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-01-28  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-config.pk.in: Make pk_version immutable.
+
 2023-01-27  Arsen Arsenović  <arsen@aarsen.me>
 
 	* run.in (setup to run uninstalled poke): Replace fragile export
