--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2023-01-28  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* bootstrap.conf (gnulib_modules): Remove obsolete package memcpy.
+
+2023-01-28  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* autoconf/poke.m4 (PK_PROG_POKE): Simplify regexp.
 
 2023-01-28  Jose E. Marchesi  <jemarch@gnu.org>
